Refactor flag handling and improve texture loading